--- a/src/Boards.xaml
+++ b/src/Boards.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="_4charp.GroupedItemsPage"
+    x:Class="_4charp.Boards"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -18,8 +18,8 @@
             of the complete item list because items in groups cannot be virtualized
         -->
         <CollectionViewSource
-            x:Name="groupedItemsViewSource"
-            Source="{Binding Groups}"
+            x:Name="BoardsSource"
+            Source="{Binding Boards}"
             IsSourceGrouped="true"
             ItemsPath="Items"
             d:Source="{Binding Boards, Source={d:DesignData Source=/DataModel/boards.json, Type=data:_4chanDataSource}}"/>
@@ -48,7 +48,7 @@
             AutomationProperties.Name="Grouped Items"
             Grid.RowSpan="2"
             Padding="116,137,40,46"
-            ItemsSource="{Binding Source={StaticResource groupedItemsViewSource}}"
+            ItemsSource="{Binding Source={StaticResource BoardsSource}}"
             SelectionMode="None"
             IsSwipeEnabled="false"
             IsItemClickEnabled="True"
