--- a/src/Catalogs.xaml
+++ b/src/Catalogs.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="_4charp.GroupedItemsPage"
+    x:Class="_4charp.Catalogs"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -18,11 +18,11 @@
             of the complete item list because items in groups cannot be virtualized
         -->
         <CollectionViewSource
-            x:Name="groupedItemsViewSource"
-            Source="{Binding Groups}"
+            x:Name="CatalogsSource"
+            Source="{Binding Catalog}"
             IsSourceGrouped="true"
             ItemsPath="Items"
-            d:Source="{Binding Boards, Source={d:DesignData Source=/DataModel/boards.json, Type=data:_4chanDataSource}}"/>
+            d:Source="{Binding [0].threads[0], Source={d:DesignData Source=/DataModel/a_catalog.json, Type=data:_4chanDataSource}}"/>
     </Page.Resources>
 
     <!--
@@ -48,7 +48,7 @@
             AutomationProperties.Name="Grouped Items"
             Grid.RowSpan="2"
             Padding="116,137,40,46"
-            ItemsSource="{Binding Source={StaticResource groupedItemsViewSource}}"
+            ItemsSource="{Binding Source={StaticResource CatalogsSource}}"
             SelectionMode="None"
             IsSwipeEnabled="false"
             IsItemClickEnabled="True"
@@ -57,10 +57,10 @@
                 <DataTemplate>
                     <Grid HorizontalAlignment="Left" Width="200" Height="250">
                         <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
-                            <Image Source="{Binding ImagePath}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}"/>
+                            <Image Source="{Binding ImagePath}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Desc}"/>
                         </Border>
                         <StackPanel VerticalAlignment="Bottom" Background="{ThemeResource ListViewItemOverlayBackgroundThemeBrush}">
-                            <TextBlock Text="{Binding Title}" Foreground="{ThemeResource ListViewItemOverlayForegroundThemeBrush}" Style="{StaticResource TitleTextBlockStyle}" Height="50" Padding="10"/>
+                            <TextBlock Text="{Binding Desc}" Foreground="{ThemeResource ListViewItemOverlayForegroundThemeBrush}" Style="{StaticResource TitleTextBlockStyle}" Height="50" Padding="10"/>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
@@ -84,7 +84,7 @@
                         AutomationProperties.Name="Back"
                         AutomationProperties.AutomationId="BackButton"
                         AutomationProperties.ItemType="Navigation Button"/>
-            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+            <TextBlock x:Name="pageTitle" Text="{Binding Board.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40" FontWeight="Bold"/>
         </Grid>
     </Grid>
