--- a/src/Catalogs.xaml
+++ b/src/Catalogs.xaml
@@ -23,7 +23,7 @@
     </Page.Resources>
 
     <Grid x:Name="back"
-          Background="#056903">
+          Background="#ffd6ae">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
                 <EntranceThemeTransition/>
@@ -40,6 +40,7 @@
             AutomationProperties.Name="Grouped Items"
             Grid.RowSpan="2"
             Padding="116,137,40,46"
+            Margin="0,15,0,0"
             ItemsSource="{Binding Source={StaticResource CatalogsSource}}"
             SelectionMode="None"
             IsSwipeEnabled="false"
@@ -64,7 +65,7 @@
             </GridView.ItemsPanel>
         </GridView>
 
-        <Grid>
+        <Grid Background="#056903">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="*"/>
@@ -77,6 +78,10 @@
                         AutomationProperties.ItemType="Navigation Button"/>
             <TextBlock x:Name="pageTitle" Text="{Binding Board.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40" FontWeight="Bold"/>
+        </Grid>
+
+        <Grid Margin="0,10,0,80" Height="50">
+            <ProgressBar x:Name="LoadingBar" Visibility="Collapsed" IsEnabled="False" IsIndeterminate="true" Height="10" HorizontalAlignment="Stretch" Margin="0,20"/>
         </Grid>
     </Grid>
 </Page>
